--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,25 @@
-name: Deploy to Azure VM
+name: Deploy Django App via Docker Compose
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v1
-
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      run: |
-        docker build -t batyr-ai-back .
-        docker tag batyr-ai-back:latest ${{ secrets.DOCKER_USERNAME }}/batyr-ai-back:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/batyr-ai-back:latest
-
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
+    runs-on: self-hosted
+
+    env:
+      BACK_ENV: ${{ vars.BACK_ENV }}
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: SSH into Azure VM and deploy
-      uses: appleboy/ssh-action@v0.1.1
-      with:
-        host: ${{ secrets.AZURE_VM_IP }}
-        username: ${{ secrets.AZURE_VM_USER }}
-        key: ${{ secrets.AZURE_VM_SSH_KEY }}
-        passphrase: ${{ secrets.AZURE_VM_SSH_PASSPHRASE }}  
-        port: 22
-        script: |
-          cd ~/batyr-ai-back
-          git pull origin main
-          docker-compose down
-          docker-compose up -d --build
+      - name: Build and run with Docker Compose
+        run: |
+          echo "$BACK_ENV" > ./backend/.env
+          echo "📦 BACK_ENV:"
+          cat ./backend/.env  
+          docker compose down
+          docker compose up -d --build
