--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      BACK_ENV: ${{ secrets.BACK_ENV }}
+      BACK_ENV: ${{ secrets.BACK_ENV }}  # содержимое .env файла в одну строку (например, VAR1=val1\nVAR2=val2)
 
     steps:
       - name: Checkout repository
@@ -22,7 +22,7 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.AZURE_VM_SSH_PASSPHRASE }}
 
-      - name: Add server to known_hosts
+      - name: Add Azure VM to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
@@ -34,7 +34,7 @@ jobs:
             cd ~/batyr-ai-back || exit 1
 
             echo "$BACK_ENV" > ./backend/.env
-            echo "📦 BACK_ENV content:"
+            echo "📦 BACK_ENV contents:"
             cat ./backend/.env
 
             git pull origin main
