--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: BatyrAi Deploy
+name: BatyrAi deploy
 
 on:
   push:
@@ -10,34 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      BACK_ENV: ${{ secrets.BACK_ENV }}  # содержимое .env файла в одну строку (например, VAR1=val1\nVAR2=val2)
+      BACK_ENV: ${{ secrets.BACK_ENV }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.7.0
+      - name: Setup SSH agent
+        uses: webfactory/ssh-agent@v0.9.0  # ✅ последняя стабильная версия
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.AZURE_VM_SSH_PASSPHRASE }}
+          ssh-private-key: ${{ secrets.AZURE_VM_SSH_KEY }}
 
       - name: Add Azure VM to known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars.AZURE_VM_IP }} >> ~/.ssh/known_hosts
 
       - name: Deploy to Azure VM
         run: |
-          ssh ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
-            set -e
-            cd ~/batyr-ai-back || exit 1
+          ssh ${{ vars.AZURE_VM_USER }}@${{ vars.AZURE_VM_IP }} << 'EOF'
+            cd ~/batyr-ai-back
+            git pull origin main
 
             echo "$BACK_ENV" > ./backend/.env
-            echo "📦 BACK_ENV contents:"
+            echo "📦 BACK_ENV:"
             cat ./backend/.env
-
-            git pull origin main
 
             docker compose down
             docker compose up -d --build
