--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      BACK_ENV: ${{ secrets.BACK_ENV }}  # .env в виде одной переменной (однострочной)
+      BACK_ENV: ${{ secrets.BACK_ENV }}
 
     steps:
       - name: Checkout repository
@@ -19,16 +19,21 @@ jobs:
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # приватный ключ в secrets
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Add Azure VM to known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.AZURE_VM_IP }}" > vm_ip.txt
+          VM_IP=$(cat vm_ip.txt)
+          ssh-keyscan -H "$VM_IP" >> ~/.ssh/known_hosts
 
       - name: Deploy to Azure VM
         run: |
-          ssh ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
+          VM_IP=${{ secrets.AZURE_VM_IP }}
+          USER=${{ secrets.AZURE_VM_USER }}
+          
+          ssh "$USER@$VM_IP" << 'EOF'
             cd ~/batyr-ai-back
             git pull origin main
 
