--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,25 +16,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup SSH agent
+      - name: Setup SSH agent (with passphrase)
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSPHRASE }}
 
       - name: Add Azure VM to known_hosts
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.AZURE_VM_IP }}" > vm_ip.txt
-          VM_IP=$(cat vm_ip.txt)
-          ssh-keyscan -H "$VM_IP" >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.AZURE_VM_IP }} >> ~/.ssh/known_hosts
 
       - name: Deploy to Azure VM
         run: |
-          VM_IP=${{ secrets.AZURE_VM_IP }}
-          USER=${{ secrets.AZURE_VM_USER }}
-          
-          ssh "$USER@$VM_IP" << 'EOF'
-            cd ~/batyr-ai-back
+          ssh ${{ secrets.AZURE_VM_USER }}@${{ secrets.AZURE_VM_IP }} << 'EOF'
+            cd ~/batyr-ai-back || exit 1
             git pull origin main
 
             echo "$BACK_ENV" > ./backend/.env
