--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./batyr-images:/batyr-images
-      - ./storage:/storage
+      - ./storage:/app/storage  
     env_file:
       - .env
     environment:
