--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,3 @@
-# В этом файле мы описываем только то, что должно быть ВНУТРИ блока http.
-# Глобальные директивы events {} и http {} здесь не нужны.
-
-sendfile on;
-tcp_nopush on;
-tcp_nodelay on;
-keepalive_timeout 65;
-types_hash_max_size 2048;
-client_max_body_size 50M;
-
 # =================================================================
 # БЛОК 1: Перенаправление с HTTP на HTTPS
 # =================================================================
@@ -17,9 +7,6 @@ server {
 
     # Для Let's Encrypt (certbot)
     location /.well-known/acme-challenge/ {
-        # Путь /var/www/certbot нужно будет пробросить в nginx-контейнер
-        # если вы будете использовать certbot для автоматического обновления.
-        # Пока можно оставить так.
         root /var/www/certbot;
     }
 
@@ -36,8 +23,10 @@ server {
     listen 443 ssl http2;
     server_name api.batyrai.com;
 
+    # Максимальный размер загружаемого файла (важно для вашего API)
+    client_max_body_size 50M;
+
     # --- Настройки SSL ---
-    # Убедитесь, что эти файлы существуют на вашем сервере по пути /etc/letsencrypt/...
     ssl_certificate /etc/letsencrypt/live/api.batyrai.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.batyrai.com/privkey.pem;
 
