--- a/nginx.conf
+++ b/nginx.conf
@@ -1,42 +1,29 @@
 # =================================================================
-# БЛОК 1: Перенаправление с HTTP на HTTPS
+# БЛОК 1: Перенаправление с HTTP на HTTPS (остается без изменений)
 # =================================================================
 server {
     listen 80;
     server_name api.batyrai.com;
-
-    # Для Let's Encrypt (certbot)
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    # Перенаправление
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    location /.well-known/acme-challenge/ { root /var/www/certbot; }
+    location / { return 301 https://$host$request_uri; }
 }
 
 # =================================================================
-# БЛОК 2: Основная конфигурация для HTTPS
+# БЛОК 2: Основная конфигурация для HTTPS (ИЗМЕНЕНИЯ ЗДЕСЬ)
 # =================================================================
 server {
     listen 443 ssl http2;
     server_name api.batyrai.com;
-
-    # Максимальный размер загружаемого файла (важно для вашего API)
     client_max_body_size 50M;
 
-    # --- Настройки SSL ---
+    # --- SSL (без изменений) ---
     ssl_certificate /etc/letsencrypt/live/api.batyrai.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.batyrai.com/privkey.pem;
+    # ... остальные ssl директивы ...
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers on;
+    # --- Маршрутизация (ИЗМЕНЕНИЯ ЗДЕСЬ) ---
 
-    # --- Маршрутизация (Reverse Proxy) ---
-
-    # Маршрут для AI-ассистента
+    # СНАЧАЛА идет более конкретный маршрут для ассистента
     location /api/ask-assistant {
         proxy_pass http://batyr-assistant:8001;
         proxy_set_header Host $host;
@@ -45,8 +32,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Маршрут для основного бэкенда
-    location /api/ {
+    # ПОТОМ идет общий маршрут, который ловит ВСЁ ОСТАЛЬНОЕ
+    location / { # <-- ИЗМЕНЕНО С /api/ на /
         proxy_pass http://batyr-backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
