--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
 # =================================================================
 # БЛОК 2: Основная конфигурация для HTTPS (ИЗМЕНЕНИЯ ЗДЕСЬ)
 # =================================================================
-server {
+sserver {
     listen 443 ssl http2;
     server_name api.batyrai.com;
     client_max_body_size 50M;
@@ -19,21 +19,29 @@ server {
     # --- SSL (без изменений) ---
     ssl_certificate /etc/letsencrypt/live/api.batyrai.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.batyrai.com/privkey.pem;
-    # ... остальные ssl директивы ...
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers on;
 
-    # --- Маршрутизация (ИЗМЕНЕНИЯ ЗДЕСЬ) ---
+    # --- Маршрутизация (Reverse Proxy) ---
 
-    # СНАЧАЛА идет более конкретный маршрут для ассистента
+    # Маршрут для AI-ассистента
     location /api/ask-assistant {
-        proxy_pass http://batyr-assistant:8001;
+        # ✅ ИЗМЕНЕНИЕ ЗДЕСЬ.
+        # Добавляем слеш в конце, чтобы Nginx не обрезал путь.
+        # Он возьмет URI запроса и добавит его к proxy_pass.
+        proxy_pass http://batyr-assistant:8001/api/ask-assistant; # <-- ГЛАВНОЕ ИЗМЕНЕНИЕ
+        
+        # Эти заголовки по-прежнему важны
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ПОТОМ идет общий маршрут, который ловит ВСЁ ОСТАЛЬНОЕ
-    location / { # <-- ИЗМЕНЕНО С /api/ на /
+    # Маршрут для основного бэкенда
+    # Этот блок остается без изменений, он уже работает правильно
+    location / {
         proxy_pass http://batyr-backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
