--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
 # =================================================================
 # БЛОК 2: Основная конфигурация для HTTPS (ИЗМЕНЕНИЯ ЗДЕСЬ)
 # =================================================================
-sserver {
+server {
     listen 443 ssl http2;
     server_name api.batyrai.com;
     client_max_body_size 50M;
