--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
 }
 
 # =================================================================
-# БЛОК 2: Основная конфигурация для HTTPS (ИЗМЕНЕНИЯ ЗДЕСЬ)
+# БЛОК 2: Основная конфигурация для HTTPS
 # =================================================================
 server {
     listen 443 ssl http2;
@@ -27,20 +27,28 @@ server {
 
     # Маршрут для AI-ассистента
     location /api/ask-assistant {
-        # ✅ ИЗМЕНЕНИЕ ЗДЕСЬ.
-        # Добавляем слеш в конце, чтобы Nginx не обрезал путь.
-        # Он возьмет URI запроса и добавит его к proxy_pass.
-        proxy_pass http://batyr-assistant:8001/api/ask-assistant; # <-- ГЛАВНОЕ ИЗМЕНЕНИЕ
+        proxy_pass http://batyr-assistant:8001/api/ask-assistant;
         
-        # Эти заголовки по-прежнему важны
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Маршрут для основного бэкенда
-    # Этот блок остается без изменений, он уже работает правильно
+    # ✅↓↓↓ НОВЫЙ МАРШРУТ ДЛЯ КАРТЫ БАТЫРОВ ↓↓↓✅
+    # Этот блок добавлен перед "location /"
+    location /api/region/ {
+        # Слеш в конце proxy_pass важен, он правильно формирует URL для вашего Flask-сервиса
+        proxy_pass http://batyr-map-data:5000/; 
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Маршрут для основного бэкенда (ловит все остальное)
+    # Этот блок остается последним
     location / {
         proxy_pass http://batyr-backend:8000;
         proxy_set_header Host $host;
