--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
 
   batyr-map-data:
     build:
-      context: .
+      context: ./map-service  # <-- Указываем папку с файлами сервиса
       dockerfile: map.Dockerfile # Указываем на наш новый Dockerfile
     container_name: batyr-map-data
     networks:
