--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 # =================================================================
-# БЛОК 1: Перенаправление с HTTP на HTTPS (остается без изменений)
+# БЛОК 1: Перенаправление с HTTP на HTTPS (без изменений)
 # =================================================================
 server {
     listen 80;
@@ -9,7 +9,7 @@ server {
 }
 
 # =================================================================
-# БЛОК 2: Основная конфигурация для HTTPS
+# БЛОК 2: Основная конфигурация для HTTPS (ИСПРАВЛЕННАЯ ВЕРСИЯ)
 # =================================================================
 server {
     listen 443 ssl http2;
@@ -25,7 +25,7 @@ server {
 
     # --- Маршрутизация (Reverse Proxy) ---
 
-    # Маршрут для AI-ассистента
+    # Маршрут для AI-ассистента (FastAPI сервис)
     location /api/ask-assistant {
         proxy_pass http://batyr-assistant:8001/api/ask-assistant;
         
@@ -35,11 +35,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ✅↓↓↓ НОВЫЙ МАРШРУТ ДЛЯ КАРТЫ БАТЫРОВ ↓↓↓✅
-    # Этот блок добавлен перед "location /"
+    # Маршрут для получения данных о регионах (Flask сервис)
     location /api/region/ {
-        # Слеш в конце proxy_pass важен, он правильно формирует URL для вашего Flask-сервиса
-        proxy_pass http://batyr-map-data:5000/; 
+        # Направляем на сервис, где запущен app.py с данными для карты
+        proxy_pass http://batyr-map-data:5000/api/region/; 
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # ✅↓↓↓ НОВЫЙ БЛОК, РЕШАЮЩИЙ ПРОБЛЕМУ CORS ↓↓↓✅
+    # Добавляем отдельный маршрут для Text-to-Speech
+    location /api/tts {
+        # Направляем на тот же Flask-сервис, что и /api/region/
+        proxy_pass http://batyr-map-data:5000/api/tts;
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
